...
            android:background="?attr/appBarColor"
            android:theme="@style/ActionBarStyle"
            app:menu="@menu/deck_picker"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/files"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:clipToPadding="false"
            android:drawSelectorOnTop="true"
            android:fastScrollEnabled="true"
...
