...
    <string name="drawing">Drawing</string>
    <string name="send_feedback">Send feedback</string>

    <string name="studyoptions_due_today">Due today:</string>
    <string name="studyoptions_new_total">Total new cards:</string>
    <string name="studyoptions_total_cards">Total cards:</string>
    <string name="studyoptions_start">Study</string>

    <!-- DeckPicker.kt -->
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="no_cards_placeholder_title">Collection is empty</string>
    <string name="no_cards_placeholder_description">Start adding cards\nusing the + icon.</string>
...
