...

    <!-- scoped storage -->
    <string name="backup_your_collection">Backup your collection</string>
    <string name="backup_collection_message">You haven\'t backed up your collection in a while. You should do this now to prevent data loss</string>
    <string name="button_backup">Backup</string>
    <string name="button_disable_reminder">Disable reminder</string>
    <string name="button_backup_later" comment="dismiss the 'Backup' dialog for around 2 weeks">Later</string>
    <string name="button_do_not_show_again" comment="permanently dismisses a dialog">Don\'t show again</string>

    <string name="dismiss_backup_warning_title">Data loss warning</string>
    <string name="dismiss_backup_warning_new_user">
        Due to Android privacy changes, your data and automated backups will be deleted from your phone if the app is uninstalled
    </string>
...
